# emd-falsify

./: .gitignore  .project-defaults.cfg  Example_exponential_decay.py  Example_loss_curves.py  README.md  _config.yml  env.yaml  pyproject.toml  setup.cfg  utils.py  validate_emd.py
.github/workflows/: deploy.yml
emd_falsify/: __init__.py  emd.py  memoize.py  path_sampling.py  tasks.py  utils.py  viz.py
emd_falsify/config/: __init__.py  defaults.cfg
emd_paper/: __init__.py  config.py  emd.py  models.py  utils.py
emd_paper/config/: .project-defaults.cfg  __init__.py  paul_tol_colors.cfg
emdd/: __init__.py  calibration.py  emd-old.py  emd.py  find_sane_dt.py  memoize.py  models.py  path_sampling.py  tasks.py  utils.py
emdd/config/: __init__.py  defaults.cfg
src/emd_falsify/: _version.py  emd.md  emd.py  path_sampling.md  path_sampling.py  tasks.md  tasks.py  utils.py  viz.md  viz.py
src/emd_falsify/config/: __init__.md  __init__.py
test/: test_emd.py  test_memoize.py  test_utils.py
