[metadata]
name    = emd-paper
version = 0.0.1a
description = Code for paper on comparing fitted models with Empirical Mean Discrepancy
long_description = file: README.md
long_description_content_type = text/markdown

url = 

author = Alexandre René
author_email = arene010@uottawa.ca
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Statistics
keywords =
    model comparison
    bayesian
    metalog
    empirical model discrepancy


[options]
packages =
    emd_paper
    emd_paper.config
# include_package_data = True
#     # Relies on setuptools-scm, which must be included in pyproject.cfg

install_requires =
    numpy
    pandas
    pydantic>=1.8.2
    tqdm

    ## Personal / patched packages ##
    parameter
    smttask
    mackelab-toolbox[iotools,utils,parameters]

    ## For executing notebooks ##
    jupytext
    ipykernel
    holoviews
    bokeh
    jupyter_bokeh
    # For bokeh export to png (also used by holoviews)
    selenium
    phantomjs
    pillow

    ## For building with Jupyter book ##
    # jupyter-book>=0.13.0
    # MyST-Parser~=0.15.2
    # MyST-NB~=0.13.2
    # MyST-NB-Bokeh>=0.5.3
    # jupyter-sphinx>=0.3.2
    jupyter-book>=0.14
    sphinx-jupyterbook-latex
    sphinx-proof>=0.1.3

[options.package_data]
* =
  *.cfg
  .*.cfg


python_requires = ~=3.9

